--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,9 +19,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
     - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      run: |
+        # Replace `linux` below with the appropriate OS
+        # Options are `alpine`, `linux`, `macos`, `windows`
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov -t ${CODECOV_TOKEN}
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
