--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,18 +17,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint coverage
     
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
-    - name: Upload coverage reports to Codecov
-      run: |
-        # Replace `linux` below with the appropriate OS
-        # Options are `alpine`, `linux`, `macos`, `windows`
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov -t ${CODECOV_TOKEN}
+        coverage run -m pylint $(git ls-files '*.py')
+        coverage report -m
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
